--- a/videocompressor/build.gradle
+++ b/videocompressor/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     })
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation files('libs/isoparser-1.1.7.jar')
+    implementation files('libs/aspectjrt-1.7.3.jar')
 }
